--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -34,8 +34,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. 838, commit <code>4bde151</code>.</strong></p>
-<p><strong>“Termux: Prevent ctrl keystrokes and autocomplete input from mixing”</strong></p>
+<p><strong>Revision No. 839, commit <code>2a8b90f</code>.</strong></p>
+<p><strong>“Termux: Changes for Android 11+, ssh-agent no longer daemonized”</strong></p>
 <div class="toc">
 <p>Table of Contents</p>
 <ul>
@@ -44,7 +44,11 @@
 <li><a href="#Quick-start">Quick start</a>
 <ul>
 <li><a href="#Installing-Debian-using-debootstrap">Installing Debian using <code>debootstrap</code></a></li>
-<li><a href="#Quick-start-on-Termux-for-Android">Quick start on Termux for Android</a></li>
+<li><a href="#Quick-start-on-Termux-for-Android">Quick start on Termux for Android</a>
+<ul>
+<li><a href="#Notes-on-Android-11-or-later">Notes on Android 11 or later</a></li>
+</ul>
+</li>
 <li><a href="#List-of-supported-platforms">List of supported platforms</a></li>
 </ul>
 </li>
@@ -109,19 +113,19 @@
 <p>View changelog since the last revision as <a href="https://github.com/microsounds/atelier/compare/HEAD~1...HEAD.diff"> <code>diff HEAD~1...HEAD</code></a></p>
 <p>The verbosity factor of this document compared to comment lines of code
 in this repo is about <strong>5:1</strong>.</p>
-<p>If this document is <em>26.4KiB</em> in
+<p>If this document is <em>26.8KiB</em> in
 size, and the approximate size of all comment lines of code is
 <em>60.9KiB</em> then this document
-currently covers about <b style="font-size: 130%;">8.69%</b>
+currently covers about <b style="font-size: 130%;">8.80%</b>
 of all implemented features and behavior in this repository.
 This is just an <a href="https://github.com/microsounds/microsounds.github.io/raw/master/.scripts/dotfiles-ls.sh">automated guess</a> though.</p>
 <p>This document and repository is also mirrored at
 <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on GitHub.</p>
-<p>Last updated 🌓 Fri, Aug 19th, 2022.</p>
+<p>Last updated 🌕 Sun, Aug 28th, 2022.</p>
 <!-- header and github badges -->
 <!-- github readmes only support align attributes for styling -->
 <div style="text-align: center;">
-<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime42.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
+<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime49.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
 <a href="https://github.com/microsounds/atelier/actions/workflows/ci.yml" title="unit tests"><img src="https://github.com/microsounds/atelier/actions/workflows/ci.yml/badge.svg" alt="ico-ci" /></a>
@@ -317,6 +321,9 @@ This is meant to be a lightweight port with modifications, do not initiate a ful
 </ul>
 </li>
 </ol>
+<h3>Notes on Android 11 or later<span id="Notes-on-Android-11-or-later"></span></h3>
+<p>Many manufacturer distributions of Android since version 11 have become far more aggressive in pruning “phantom” processes (daemons) in the pursuit of battery life optimization.
+In order to prevent Android from prematurely pruning <code>ssh-agent</code> while multitasking, it is called as the parent process for the current shell.</p>
 <h2>List of supported platforms<span id="List-of-supported-platforms"></span></h2>
 <p><strong>Full graphical shell environment</strong></p>
 <ul>
@@ -941,7 +948,7 @@ because it doesn’t tie into any <code>dbus</code>-based notification daemon im
 <em>Version numbers for selected long-lived components
 found in the current revision:</em></p>
 <ul>
-<li><code>android-termux.sh v0.9</code></li>
+<li><code>android-termux.sh v1.0</code></li>
 <li><code>chromium_widevine.sh v0.2</code></li>
 <li><code>git_status.sh v0.7</code></li>
 <li><code>moonphase-date v0.2</code></li>
@@ -953,12 +960,12 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-202.64KiB
+203.08KiB
 out of a total compressed git history size of
-746.09KiB.</em></p>
+747.47KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
-<pre><code><span class="term-prompt">root@04d2b33cb697</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
+<pre><code><span class="term-prompt">root@d1f84b769016</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
 -rw-r--r-- 1 8.4K   May 12 2022 02:36 rev. 130 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.1K   Jun 29 2022 14:52 rev. 78  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  395   Mar 10 2022 17:55 rev. 8   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
@@ -1066,11 +1073,11 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1  808   Feb 13 2022 22:53 rev. 3   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/29-chromium-extensions.sh">.once.d/29-chromium-extensions.sh</a>
 -rwxr-xr-x 1   58   Nov 30 2021 00:47 rev. 3   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/2a-remove-motd.sh">.once.d/2a-remove-motd.sh</a>
 -rwxr-xr-x 1  201   Mar  2 2022 12:39 rev. 2   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/2b-enscript-fonts.sh">.once.d/2b-enscript-fonts.sh</a>
--rwxr-xr-x 1 3.1K   Aug 19 2022 11:06 rev. 23  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/a0-android-termux.sh">.once.d/a0-android-termux.sh</a>
+-rwxr-xr-x 1 3.2K   Aug 28 2022 22:58 rev. 24  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/a0-android-termux.sh">.once.d/a0-android-termux.sh</a>
 -rwxr-xr-x 1  200   Jun 18 2021 00:52 rev. 9   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/c0-chromebook-delete-key.sh">.once.d/c0-chromebook-delete-key.sh</a>
 -rwxr-xr-x 1  818   Feb 25 2022 18:12 rev. 11  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/c1-chromebook-i915.sh">.once.d/c1-chromebook-i915.sh</a>
 -rwxr-xr-x 1  195   Dec 16 2021 07:15 rev. 1   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.once.d/p0-pocketchip-delete-key.sh">.once.d/p0-pocketchip-delete-key.sh</a>
--rw-r--r-- 1  835   Mar 21 2022 23:26 rev. 29  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.profile">.profile</a>
+-rw-r--r-- 1  834   Aug 28 2022 22:58 rev. 30  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.profile">.profile</a>
 -rw-r--r-- 1  276   Dec 14 2021 20:38 rev. 6   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.scrc">.scrc</a>
 -rw-r--r-- 1 2.0K   Feb  4 2022 11:57 rev. 69  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.xinitrc">.xinitrc</a>
 -rw-r--r-- 1 1.9K   Mar 10 2022 18:15 rev. 25  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.xresources">.xresources</a>
@@ -1082,10 +1089,10 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 2.0K   Mar 12 2022 17:16 rev. 5   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  27K   Jul 11 2022 21:39 rev. 180 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  27K   Aug 28 2022 22:58 rev. 181 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Fri, 19 Aug 2022 11:06:22 -0500 -->
+<!-- updated Sun, 28 Aug 2022 22:58:16 -0500 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
